k8s/templates/25-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-route
spec:
  selector:
    app: api-route
  type: ClusterIP
  ports:  
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
