k8s/templates/35-api2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api2-route
spec:
  selector:
    app: api2-route
  type: ClusterIP
  ports:  
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
