k8s/templates/45-qrcode-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qrcode
spec:
  selector:
    app: qrcode
  type: ClusterIP
  ports:  
    - name: http
      port: 8888
      targetPort: 8888
      protocol: TCP
