k8s/templates/80-istio-gateway-local.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-route-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
